--- a/reg.html
+++ b/reg.html
@@ -8,7 +8,7 @@ Registration Page
 <style>
 
 body {
-  background-image: url("reg.JPEG");
+  background-image: url("https://shafeeq4044.github.io/reg/reg.jpeg");
   background-size: cover;
 }
 </style>
