--- a/reg.html
+++ b/reg.html
@@ -52,7 +52,7 @@ Time:
 </select><br><br>
 
 <form action="" method="post">
-<a href="file:///D:/new/3.html"></<a>
+<a href="https://shafeeq4044.github.io/registered/registered"></<a>
 <input type="button"value="Register">
 </form>
 </form>
